refactor  maintainability